Mitigate acressive tab stops that make highly nested markup hard to read
Closes #18

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,10 @@ p, pre {
 	margin-bottom: 1em;
 }
 
+pre {
+	tab-size: 2;
+}
+
 h2 {
 	font-size: 1.2em;
 	font-weight: bold;
